--- a/tools/chmmaker/languages/chmmaker.ru.po
+++ b/tools/chmmaker/languages/chmmaker.ru.po
@@ -293,6 +293,10 @@ msgctxt "chmstrconsts.rssubitem"
 msgid "Subitem"
 msgstr "Подэлемент"
 
+#: chmstrconsts.rstableofcontentsfilenameneeded
+msgid "The name of the table-of-contents-file (.hhc) is not specified."
+msgstr ""
+
 #: chmstrconsts.rstargetcpu
 msgctxt "chmstrconsts.rstargetcpu"
 msgid "Target CPU:"
@@ -354,6 +358,12 @@ msgstr "Добавить файлы"
 #: tchmform.autoaddlinksbtn.caption
 msgid "Auto add HREF files"
 msgstr "Автоматически добавить файлы HREF"
+
+#: tchmform.caption
+#, fuzzy
+msgctxt "tchmform.caption"
+msgid "CHM Help File Maker"
+msgstr "Компоновщик файлов справки CHM"
 
 #: tchmform.chmfilenamelabel.caption
 msgid "CHM filename"
