--- a/languages/lazaruside.he.po
+++ b/languages/lazaruside.he.po
@@ -1857,7 +1857,7 @@ msgid "Underline"
 msgstr "קו תחתון"
 
 #: lazarusidestrconsts.dlgelastictabs
-msgid "Elastic tabs"
+msgid "Elastic tabstops"
 msgstr ""
 
 #: lazarusidestrconsts.dlgelastictabswidths
@@ -16160,6 +16160,10 @@ msgstr "קובץ חדש לא בנתיב \"כלול\""
 msgctxt "lazarusidestrconsts.lispenofilesmissingallfilesexist"
 msgid "No files missing. All files exist."
 msgstr "לא חסרים קבצים. כל הקבצים קיימים."
+
+#: lazarusidestrconsts.lispeoffsortforreorder
+msgid "Please disable alphabetical sorting if you need to reorder items manually."
+msgstr ""
 
 #: lazarusidestrconsts.lisperemovefiles
 msgid "Remove files"
