--- a/languages/lazaruside.ja.po
+++ b/languages/lazaruside.ja.po
@@ -1828,7 +1828,7 @@ msgid "Underline"
 msgstr "下線"
 
 #: lazarusidestrconsts.dlgelastictabs
-msgid "Elastic tabs"
+msgid "Elastic tabstops"
 msgstr ""
 
 #: lazarusidestrconsts.dlgelastictabswidths
@@ -15661,6 +15661,10 @@ msgstr "新しいファイルはインクルードパスにありません"
 msgctxt "lazarusidestrconsts.lispenofilesmissingallfilesexist"
 msgid "No files missing. All files exist."
 msgstr "見つからないファイルはありません。すべてあります。"
+
+#: lazarusidestrconsts.lispeoffsortforreorder
+msgid "Please disable alphabetical sorting if you need to reorder items manually."
+msgstr ""
 
 #: lazarusidestrconsts.lisperemovefiles
 msgid "Remove files"
