--- a/languages/lazaruside.ar.po
+++ b/languages/lazaruside.ar.po
@@ -1777,7 +1777,7 @@ msgid "Underline"
 msgstr ""
 
 #: lazarusidestrconsts.dlgelastictabs
-msgid "Elastic tabs"
+msgid "Elastic tabstops"
 msgstr ""
 
 #: lazarusidestrconsts.dlgelastictabswidths
@@ -15319,6 +15319,10 @@ msgstr ""
 #: lazarusidestrconsts.lispenofilesmissingallfilesexist
 msgctxt "lazarusidestrconsts.lispenofilesmissingallfilesexist"
 msgid "No files missing. All files exist."
+msgstr ""
+
+#: lazarusidestrconsts.lispeoffsortforreorder
+msgid "Please disable alphabetical sorting if you need to reorder items manually."
 msgstr ""
 
 #: lazarusidestrconsts.lisperemovefiles
