--- a/languages/lazaruside.cs.po
+++ b/languages/lazaruside.cs.po
@@ -1801,7 +1801,7 @@ msgid "Underline"
 msgstr "Podtržené"
 
 #: lazarusidestrconsts.dlgelastictabs
-msgid "Elastic tabs"
+msgid "Elastic tabstops"
 msgstr ""
 
 #: lazarusidestrconsts.dlgelastictabswidths
@@ -15574,6 +15574,10 @@ msgstr "Nový soubor není v zahrnované cestě"
 msgctxt "lazarusidestrconsts.lispenofilesmissingallfilesexist"
 msgid "No files missing. All files exist."
 msgstr "Žádné chybějící soubory. Všechny soubory existují."
+
+#: lazarusidestrconsts.lispeoffsortforreorder
+msgid "Please disable alphabetical sorting if you need to reorder items manually."
+msgstr ""
 
 #: lazarusidestrconsts.lisperemovefiles
 msgid "Remove files"
