--- a/languages/lazaruside.de.po
+++ b/languages/lazaruside.de.po
@@ -1776,7 +1776,7 @@ msgid "Underline"
 msgstr "Unterstreichen"
 
 #: lazarusidestrconsts.dlgelastictabs
-msgid "Elastic tabs"
+msgid "Elastic tabstops"
 msgstr ""
 
 #: lazarusidestrconsts.dlgelastictabswidths
@@ -15326,6 +15326,10 @@ msgstr "Neue Datei ist nicht im Include-Pfad"
 msgctxt "lazarusidestrconsts.lispenofilesmissingallfilesexist"
 msgid "No files missing. All files exist."
 msgstr "Keine Dateien fehlen. Alle Dateien existieren."
+
+#: lazarusidestrconsts.lispeoffsortforreorder
+msgid "Please disable alphabetical sorting if you need to reorder items manually."
+msgstr ""
 
 #: lazarusidestrconsts.lisperemovefiles
 msgid "Remove files"
