--- a/languages/lazaruside.fi.po
+++ b/languages/lazaruside.fi.po
@@ -1778,7 +1778,7 @@ msgid "Underline"
 msgstr "Alleviivaus"
 
 #: lazarusidestrconsts.dlgelastictabs
-msgid "Elastic tabs"
+msgid "Elastic tabstops"
 msgstr ""
 
 #: lazarusidestrconsts.dlgelastictabswidths
@@ -15393,6 +15393,10 @@ msgstr "Uusi tiedosto ei ole include-polussa"
 #: lazarusidestrconsts.lispenofilesmissingallfilesexist
 msgid "No files missing. All files exist."
 msgstr "Ei puuttuvia tiedostoja. Kaikki löytyvät."
+
+#: lazarusidestrconsts.lispeoffsortforreorder
+msgid "Please disable alphabetical sorting if you need to reorder items manually."
+msgstr ""
 
 #: lazarusidestrconsts.lisperemovefiles
 msgid "Remove files"
