--- a/languages/lazaruside.lt.po
+++ b/languages/lazaruside.lt.po
@@ -1833,7 +1833,7 @@ msgid "Underline"
 msgstr "Pabraukimas"
 
 #: lazarusidestrconsts.dlgelastictabs
-msgid "Elastic tabs"
+msgid "Elastic tabstops"
 msgstr ""
 
 #: lazarusidestrconsts.dlgelastictabswidths
@@ -15697,6 +15697,10 @@ msgstr "Naujo failo nėra įterpiamųjų kelyje"
 msgctxt "lazarusidestrconsts.lispenofilesmissingallfilesexist"
 msgid "No files missing. All files exist."
 msgstr "Failų netrūksta. Visi failai egzistuoja."
+
+#: lazarusidestrconsts.lispeoffsortforreorder
+msgid "Please disable alphabetical sorting if you need to reorder items manually."
+msgstr ""
 
 #: lazarusidestrconsts.lisperemovefiles
 msgid "Remove files"
