--- a/languages/lazaruside.nl.po
+++ b/languages/lazaruside.nl.po
@@ -1810,7 +1810,7 @@ msgid "Underline"
 msgstr "Onderstreep"
 
 #: lazarusidestrconsts.dlgelastictabs
-msgid "Elastic tabs"
+msgid "Elastic tabstops"
 msgstr ""
 
 #: lazarusidestrconsts.dlgelastictabswidths
@@ -15797,6 +15797,10 @@ msgstr ""
 #: lazarusidestrconsts.lispenofilesmissingallfilesexist
 msgctxt "lazarusidestrconsts.lispenofilesmissingallfilesexist"
 msgid "No files missing. All files exist."
+msgstr ""
+
+#: lazarusidestrconsts.lispeoffsortforreorder
+msgid "Please disable alphabetical sorting if you need to reorder items manually."
 msgstr ""
 
 #: lazarusidestrconsts.lisperemovefiles
