--- a/languages/lazaruside.pot
+++ b/languages/lazaruside.pot
@@ -1757,7 +1757,7 @@ msgid "Underline"
 msgstr ""
 
 #: lazarusidestrconsts.dlgelastictabs
-msgid "Elastic tabs"
+msgid "Elastic tabstops"
 msgstr ""
 
 #: lazarusidestrconsts.dlgelastictabswidths
@@ -15230,6 +15230,10 @@ msgstr ""
 #: lazarusidestrconsts.lispenofilesmissingallfilesexist
 msgctxt "lazarusidestrconsts.lispenofilesmissingallfilesexist"
 msgid "No files missing. All files exist."
+msgstr ""
+
+#: lazarusidestrconsts.lispeoffsortforreorder
+msgid "Please disable alphabetical sorting if you need to reorder items manually."
 msgstr ""
 
 #: lazarusidestrconsts.lisperemovefiles
