--- a/languages/lazaruside.sk.po
+++ b/languages/lazaruside.sk.po
@@ -1775,7 +1775,7 @@ msgid "Underline"
 msgstr "Podčiarknuté"
 
 #: lazarusidestrconsts.dlgelastictabs
-msgid "Elastic tabs"
+msgid "Elastic tabstops"
 msgstr ""
 
 #: lazarusidestrconsts.dlgelastictabswidths
@@ -15435,6 +15435,10 @@ msgstr ""
 #: lazarusidestrconsts.lispenofilesmissingallfilesexist
 msgctxt "lazarusidestrconsts.lispenofilesmissingallfilesexist"
 msgid "No files missing. All files exist."
+msgstr ""
+
+#: lazarusidestrconsts.lispeoffsortforreorder
+msgid "Please disable alphabetical sorting if you need to reorder items manually."
 msgstr ""
 
 #: lazarusidestrconsts.lisperemovefiles
