IDEDebugger: regenerated translations and updated Russian translation

--- a/ide/packages/idedebugger/languages/idedebuggerstringconstants.ca.po
+++ b/ide/packages/idedebugger/languages/idedebuggerstringconstants.ca.po
@@ -1662,7 +1662,7 @@ msgid "Debug Output"
 msgstr "Sortida de depuració"
 
 #: idedebuggerstringconstants.lismenuviewmemviewer
-msgid "Mem viewer"
+msgid "Memory Viewer"
 msgstr ""
 
 #: idedebuggerstringconstants.lismore
