--- a/ide/packages/idedebugger/languages/idedebuggerstringconstants.es.po
+++ b/ide/packages/idedebugger/languages/idedebuggerstringconstants.es.po
@@ -1693,7 +1693,7 @@ msgid "Debug Output"
 msgstr "Depurar Salida"
 
 #: idedebuggerstringconstants.lismenuviewmemviewer
-msgid "Mem viewer"
+msgid "Memory Viewer"
 msgstr ""
 
 #: idedebuggerstringconstants.lismore
