--- a/ide/packages/idedebugger/languages/idedebuggerstringconstants.it.po
+++ b/ide/packages/idedebugger/languages/idedebuggerstringconstants.it.po
@@ -1691,7 +1691,7 @@ msgid "Debug Output"
 msgstr "Segnalazioni di debug"
 
 #: idedebuggerstringconstants.lismenuviewmemviewer
-msgid "Mem viewer"
+msgid "Memory Viewer"
 msgstr ""
 
 #: idedebuggerstringconstants.lismore
