--- a/ide/packages/idedebugger/languages/idedebuggerstringconstants.nl.po
+++ b/ide/packages/idedebugger/languages/idedebuggerstringconstants.nl.po
@@ -1665,7 +1665,7 @@ msgid "Debug Output"
 msgstr "Debugger output"
 
 #: idedebuggerstringconstants.lismenuviewmemviewer
-msgid "Mem viewer"
+msgid "Memory Viewer"
 msgstr ""
 
 #: idedebuggerstringconstants.lismore
