--- a/ide/packages/idedebugger/languages/idedebuggerstringconstants.af_ZA.po
+++ b/ide/packages/idedebugger/languages/idedebuggerstringconstants.af_ZA.po
@@ -1645,7 +1645,7 @@ msgid "Debug Output"
 msgstr ""
 
 #: idedebuggerstringconstants.lismenuviewmemviewer
-msgid "Mem viewer"
+msgid "Memory Viewer"
 msgstr ""
 
 #: idedebuggerstringconstants.lismore
