--- a/ide/packages/idedebugger/languages/idedebuggerstringconstants.ar.po
+++ b/ide/packages/idedebugger/languages/idedebuggerstringconstants.ar.po
@@ -1643,7 +1643,7 @@ msgid "Debug Output"
 msgstr ""
 
 #: idedebuggerstringconstants.lismenuviewmemviewer
-msgid "Mem viewer"
+msgid "Memory Viewer"
 msgstr ""
 
 #: idedebuggerstringconstants.lismore
