--- a/ide/packages/idedebugger/languages/idedebuggerstringconstants.lt.po
+++ b/ide/packages/idedebugger/languages/idedebuggerstringconstants.lt.po
@@ -1689,7 +1689,7 @@ msgid "Debug Output"
 msgstr "Derinimo išvestis"
 
 #: idedebuggerstringconstants.lismenuviewmemviewer
-msgid "Mem viewer"
+msgid "Memory Viewer"
 msgstr ""
 
 #: idedebuggerstringconstants.lismore
