--- a/ide/packages/idedebugger/languages/idedebuggerstringconstants.pl.po
+++ b/ide/packages/idedebugger/languages/idedebuggerstringconstants.pl.po
@@ -1700,7 +1700,7 @@ msgid "Debug Output"
 msgstr "Wyjście odpluskwiacza"
 
 #: idedebuggerstringconstants.lismenuviewmemviewer
-msgid "Mem viewer"
+msgid "Memory Viewer"
 msgstr ""
 
 #: idedebuggerstringconstants.lismore
